--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1213,6 +1213,16 @@ config DYNAMIC_STUNE_BOOST
 	  This option extends the SchedTune framework and provides APIs to
 	  activate and reset SchedTune boosting from anywhere in the kernel.
 
+          If unsure, say N.
+
+config CPUSETS_ASSIST
+	bool "Cpusets configuration helper"
+	depends on CPUSETS
+	depends on ANDROID
+	help
+	  This option enables the configuration of default cpusets
+	  parameters from kernel.
+
 	  If unsure, say N.
 
 config SYSFS_DEPRECATED
